# Redroid

./: .gitignore  MANIFEST.in  README.md  README_MODULAR.md  REFACTORING_GUIDE.md  RELEASE.md  auto_refactor.py  complete_refactor.py  create_menus.py  install.py  main.py  pyproject.toml  redroid.py  refactor_redroid.py  refactor_with_ast.py  requirements.txt  setup.py  test_build.py
.github/workflows/: workflow.yml
Backup/: tapjacking_builder.py  task_hijacking_builder.py
frida-scripts/: android-biometric-bypass.js  root-check-bypass.js  ssl-pinning-bypass.js
redroid/: config.py
redroid/core/: adb.py  device.py  utils.py
redroid/menus/: api_keys_menu.py  drozer_menu.py  emulator_menu.py  exploits_menu.py  frida_menu.py  main_menu.py  run_tools_menu.py
redroid/modules/api_keys/: google_maps.py
redroid/modules/drozer/: agent.py  forward.py  vulnscan.py
redroid/modules/emulator/: certificate.py  logcat.py
redroid/modules/exploits/: apk_utils.py  tapjacking.py  task_hijacking.py
redroid/modules/frida/: biometric_bypass.py  custom_script.py  memory_dump.py  root_bypass.py  server.py  ssl_bypass.py
redroid/modules/tools/: android_studio.py  apkleaks.py  mobsf.py  nuclei.py  trufflehog.py
